syntax = "proto3";

option java_package = "com.flipperdevices.core.preference.pb";
option java_multiple_files = true;

message PairSettings {
  bool tos_passed = 1;
  bool pair_device_pass = 2;
  string device_id = 3;
  string device_name = 4;
}